# Ticket-Controller-Spec

./: .gitignore  AGENTS.md  IDENTITY.md  LICENSE  MEMORY.md  README.md  USER.md
.cluster/: expert-playbook.md
.openclaw/: workspace-state.json
Mock_FIGMA/: README.md  index.html  package.json
SpecDriven/: .gitignore  README.md  index.html  package-lock.json  package.json
SpecDriven/docs/: README.md
SpecDriven/src/: App.tsx  main.tsx
SpecDriven/src-tauri/: Cargo.toml  tauri.conf.json
SpecDriven/src-tauri/capabilities/: default.json
SpecDriven/src-tauri/icons/: henry.w@example.net  icon.icns
SpecDriven/src-tauri/src/: lib.rs  main.rs
SpecDriven/src-tauri/src/commands/: attachments.rs  checklist.rs  clients.rs  cloud_sync.rs  config_cmds.rs  documents.rs  hours_report.rs  mod.rs  notes.rs  search.rs  snippets.rs  tickets.rs  timer.rs  zip_ops.rs
SpecDriven/src-tauri/src/docx/: mod.rs
SpecDriven/src-tauri/src/domain/: cloud_sync.rs  config.rs  error.rs  hours.rs  mod.rs  models.rs  paths.rs  timer.rs  validation.rs  workspace.rs
SpecDriven/src-tauri/templates/: EF.docx  ET.docx  TestesUnitarios.docx
docs/: README.md  go-live-checklist.md  guia-instalacao.md  itil-v5-diagnostico.html  itil-v5-diagnostico.md  security.md  settings.md
memory/: 2026-07-14.md
specdriven-platform/: .dockerignore  .env.example  .env.production.example  .gitignore  README.md  dev-all.bat  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts
specdriven-platform/docker/: Caddyfile  Dockerfile.vite-spa  minio-init.sh  (+1 more)
(+183 files in other folders)
