[package]
name = "specdriven"
version = "1.0.0"
description = "SpecDriven — organização local de atendimentos e geração de EF/ET/TU"
authors = ["SpecDriven"]
edition = "2021"

[lib]
name = "specdriven_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
chrono = { version = "0.4.45", features = ["serde", "clock"] }
zip = "8.6.0"
walkdir = "2.5.0"
regex = "1.13.0"
thiserror = "2.0.18"
uuid = { version = "1.23.5", features = ["serde", "v4"] }
base64 = "0.22"
